--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-   font-family: 'Muller';
+   font-family: "Muller";
    font-weight: 400;
    background: #f1f1f1;
 }
@@ -81,7 +81,7 @@ body {
 .menu__input::placeholder {
    font-size: 14px;
    line-height: 2;
-   color:#bebebe; 
+   color: #bebebe;
 }
 .search {
    position: absolute;
@@ -90,7 +90,7 @@ body {
    background: url(../img/search.png) no-repeat;
    width: 22px;
    height: 22px;
-   opacity: .7;
+   opacity: 0.7;
 }
 
 /* RESERVATION==================== */
@@ -119,7 +119,7 @@ body {
 
    border-radius: 12px;
 }
-.form__input::placeholder{
+.form__input::placeholder {
    color: #999999;
 }
 .reservation__btn {
@@ -205,7 +205,7 @@ body {
 .services__item {
    max-width: 572px;
    margin-bottom: 24px;
-   
+
    background: #ffffff;
    border-radius: 12px;
 }
@@ -256,6 +256,7 @@ body {
    border-radius: 12px;
 }
 .advantages__icon {
+   width: 30%;
    padding-bottom: 20px;
 }
 .advantages__text {
@@ -302,6 +303,7 @@ body {
 .star {
    display: inline-block;
    background: url(../img/star-empty.png);
+   color: #fff;
    width: 14px;
    height: 13px;
 }
