--- a/css/style.css
+++ b/css/style.css
@@ -256,7 +256,7 @@ body {
    border-radius: 12px;
 }
 .advantages__icon {
-   width: 30%;
+   width: 65px;
    padding-bottom: 20px;
 }
 .advantages__text {
