--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,20 @@ body {
 .form__input::placeholder {
    color: #999999;
 }
+.select {
+   font-family: "Muller";
+   font-weight: 400;
+   font-size: 16px;
+   color: #999;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+}
+.nights::-webkit-inner-spin-button {
+   display: none;
+}
+.date {
+   color: #999999;
+}
 .reservation__btn {
    padding: 27px 30px;
 
@@ -492,13 +506,12 @@ body {
    flex: 0 1 45%;
 }
 .footer__address {
-   margin-bottom: 30px;
    font-style: normal;
 }
 .footer__phone {
    display: flex;
    flex-direction: column;
-   margin-bottom: 25px;
+   margin: 30px 0 25px;
 }
 .footer-link {
    display: flex;
